@@ -4,6 +4,8 @@
 	  the method declaration allow the change, rather than always making
 	  these methods public
 	* Allow covariant return types as C# has them
+	* Make some classes non-abstract by adding the missing methods
+	* Fix code generation of QApplication.Exec() so apps don't crash on exit
 
 2007-03-11  Richard Dale  <rdale@foton.es>
 
